pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constOuter.pkl
notConst = 10

class Foo {
  shouldBeConst = outer.notConst
}

foo = new Foo {}
